--- a/src/index.pug
+++ b/src/index.pug
@@ -7,6 +7,6 @@ block var
 block main
 	div(id="indexPage")
 		include _templates/index/i-1
-		include _templates/index/i-2
+		//- include _templates/index/i-2
 
 block scripts
