phu add banner - story page

--- a/src/_templates/_layout/_layout.pug
+++ b/src/_templates/_layout/_layout.pug
@@ -23,7 +23,7 @@ html(lang="en")
 			include _header.pug
 		block banner, bannerSub
 			include _banner.pug
-			include _bannerSub.pug
+			//- include _bannerSub.pug
 		main
 			block main
 		block footer
