--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,7 @@ block var
 	- let title = 'Page | Index';
 	- let bodyClass = 'index-page';
 	- let indexFooter = "indexfooter";
+	- let bannerIndex = "bannerIndex";
 
 block main
 	div(id="indexPage")
