--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -5,10 +5,10 @@
 	margin: 0;
 	padding: 0;
 }
-*::after, 
-*::before{
-  content: "";
-}
+// *::after, 
+// *::before{
+//   content: "";
+// }
 html {
 	// trình duyệt mặc định font-size: 16px
 	-webkit-text-size-adjust: 100%;
@@ -28,7 +28,7 @@ body {
 	// 	"Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
 	// 	"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	
 	line-height: 1.2;
 	// color: #000000;
