phu sua nham tren master commit lai thui ko gi dau

--- a/src/_templates/story/s-1.pug
+++ b/src/_templates/story/s-1.pug
@@ -1,5 +1,7 @@
 section#story-1
-    .story 
-        .container
-            .story--wrapper
+    .container
+        .story--wrapper
+            .story--wrapper__title
+            .story--wrapper__content 
+
                 
