village 2 and section space 72

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -282,6 +282,37 @@
 ////////////////////////////////////////////////
 
 ////////////////////////////////////////////////
+///////////////// SECTION ////////////////////////
+
+@mixin section($key, $name, $side: '-1'){
+  @each $idx, $val in map-get($section, #{$key}){
+    @if $side == '-1'{
+      @if $idx == default{
+        #{$name}: $val;
+      }
+      @else{
+        @media (max-width: map-get($media, $idx)){
+          #{$name}: $val;
+        }
+      }
+    }
+    @else{
+      @if $idx == default{
+        #{$name}: $val $side;
+      }
+      @else{
+        @media (max-width: map-get($media, $idx)){
+          #{$name}: $val $side;
+        }
+      }
+    }
+  }
+}
+
+///////////////// SECTION ////////////////////////
+////////////////////////////////////////////////
+
+////////////////////////////////////////////////
 ///////////////// PAGE ////////////////////////
 
 
