--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,8 @@
 @import "layout/header";
 @import "layout/banner";
 @import "layout/footer";
+@import "layout/card-info.scss";
+@import "layout/card-document.scss";
 
 // page
 @import "pages/index/style";
