--- a/src/styles/pages/index/i-1.scss
+++ b/src/styles/pages/index/i-1.scss
@@ -1,11 +1,38 @@
 .index-1 {
   @include space(s70, margin-top);
+  @include space(s70, margin-bottom);
+  background: map-get($color , bg );
+  &__wrapper{
+    position: relative;
+    width: 100%;
+    .hoavan-line-1{
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      // width: 100%;
+      // height: 100%;
+      // object-position: bottom;
+      //  
+      svg{
+        
+      }
+    }
+    .hoavan-line-2{
+      position: absolute;
+      top: 0;
+      right: 0;
+      // width: 50%;
+      // height: 50%;
+      object-position: right;
+      
+    }
+  }
   &__content{
     @include spaceIndex(s50, padding-left);
     @include spaceIndex(s50, padding-right);
     box-shadow: 0 3px 6px rgba(0,0,0,.16);
-    border-radius: 30px;
-    position: relative;
+    border-radius: 30px 0px 30px 0px;
+   
   }
   &__title{
     @include spaceIndex(s80,padding-top);
@@ -48,4 +75,5 @@
       line-height: 1.2;
     }
   }
+  
 }
