phu add story page

--- a/src/_templates/story/s-1.pug
+++ b/src/_templates/story/s-1.pug
@@ -1,7 +1,19 @@
 section#story-1
     .container
-        .story--wrapper
-            .story--wrapper__title
-            .story--wrapper__content 
-
+        .story-1--wrapper
+            .story-1--wrapper__title
+            .story-1--wrapper__content 
+                .story-1--wrapper__content-img.column-6.column-12-tm
+                    .story-1--wrapper__content-img_big
+                        img(src="./assets/page/story/story-1.png", alt="")
+                    .story-1--wrapper__content-img_small
+                        .story-1--wrapper__content-img_small-wrapper
+                            .column-8
+                                img(src="./assets/page/story/story-2.png", alt="")
+                            .column-4
+                                img(src="./assets/page/story/story-3.png", alt="")
+                .story-1--wrapper__content-decs.column-6.column-12-tm
+                    .story-1--wrapper__content-decs_infor
+                        p Mọi hành động xuất phát từ tình yêu thương và cảm xúc của con người dành cho nhau đều là tình cảm cao quý. Những nghĩa cử đẹp dành cho các con ở Làng Hy Vọng đều được dựa trên giá trị của tình yêu thương đó, san sẻ và đồng hành cùng những mảnh đời  bất hạnh, đưa - đón các con bước vào đời trong trong niềm thương và hạnh phúc ngập tràn. 
+                        p Thế giới sẽ tốt đẹp hơn nhờ có tình thương đồng loại; bớt đi một nổi buồn, đầy thêm những niềm vui, xây dựng một cộng đồng giàu tình yêu thương, lan truyền nhựa sống đến các thế hệ về sau.
                 
