--- a/src/styles/layout/_banner.scss
+++ b/src/styles/layout/_banner.scss
@@ -1,6 +1,7 @@
 
 .banner{
   height: 100vh;
+  max-height: 1080px;
   width: 100%;
   position: relative;
   overflow: hidden;
@@ -18,15 +19,20 @@
      
     }
     .banner-section{
-      @include rp(tl){
-        top: 50%;
-      }
+     
+      
       top: 75%;
       left: 50%;
       transform: translate(-50%,0);
       text-align: center;
       justify-content: center;
       transition: .4s ease-in-out;
+      @include rp(tl){
+        top: 50%;
+      }
+      @include rp(mx){
+        top: 60%;
+      }
      &__title{
         padding: 40px 115px;
         border-radius: 30px 0 30px 0;
@@ -40,7 +46,7 @@
           padding: 40px  50px;
         }
         @include rp(mx){
-          padding:30px ;
+          padding:25px ;
         }
       &::after{
         position: absolute;
