--- a/src/_templates/members/m-1.pug
+++ b/src/_templates/members/m-1.pug
@@ -1,3 +1,42 @@
 section#members1 
-  .members1 
-    
+  .members1
+    .container
+      .members1--wrapper
+        .swiper-container.myStudent
+          .swiper-wrapper
+            .swiper-slide
+              .myStudent__slide
+                img(src="./assets/_page/members/student-4.png", alt="")
+            .swiper-slide
+              .myStudent__slide
+                img(src="./assets/_page/members/student-3.png", alt="")
+            .swiper-slide
+              .myStudent__slide
+                img(src="./assets/_page/members/student-3.png", alt="")
+            .swiper-slide
+              .myStudent__slide
+                img(src="./assets/_page/members/student-2.png", alt="")
+            .swiper-slide
+              .myStudent__slide
+                img(src="./assets/_page/members/student-1.png", alt="")
+        .nav-custom
+          .swiper-container.myStudent-thumb
+            .swiper-wrapper
+                .swiper-slide
+                  img(src="./assets/_page/members/student-4.png", alt="")
+                .swiper-slide
+                  img(src="./assets/_page/members/student-3.png", alt="")
+                .swiper-slide
+                  img(src="./assets/_page/members/student-3.png", alt="")
+                .swiper-slide
+                  img(src="./assets/_page/members/student-2.png", alt="")
+                .swiper-slide
+                  img(src="./assets/_page/members/student-1.png", alt="")
+          .swiper-button-next
+              <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 18.121 33.414">
+                  <path id="Path_8" data-name="Path 8" d="M2300,2896l16,16-16,16" transform="translate(-2299.293 -2895.293)" fill="none" stroke="#066543" stroke-width="2"/>
+              </svg>
+          .swiper-button-prev
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.121 33.414">
+                  <path id="Path_8" data-name="Path 8" d="M2316,2896l-16,16,16,16" transform="translate(-2298.586 -2895.293)" fill="none" stroke="#066543" stroke-width="2"/>
+              </svg>
