--- a/src/_templates/index/i-1.pug
+++ b/src/_templates/index/i-1.pug
@@ -4,7 +4,9 @@
             .index-1__wrapper
                 .index-1__content.hoavan
                     .index-1__title 
-                        h1  Thông điệp Làng Hi Vọng!
+                       each val in ["1"]
+                            - let title = 'Thông Điệp làng Hy vọng!'
+                            include ../_layout/title.pug
                     .index-1__desc 
                         p Làng Hy Vọng – ngôi làng đặc biệt đang cưu mang, chăm sóc, nuôi nấng và giáo dục những trẻ em có hoàn cảnh khó khăn trên địa bàn Quảng Nam – Đà Nẵng. Nơi đây bù đắp cho các con một mái ấm gia đình đúng nghĩa.
                 //- .hoavan-line-1 
