--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
 @import "layout/header";
 @import "layout/banner";
 @import "layout/footer";
+@import "layout/title";
 
 // page
 @import "pages/index/style";
