--- a/src/styles/pages/index/i-1.scss
+++ b/src/styles/pages/index/i-1.scss
@@ -1,6 +1,6 @@
 .index-1 {
-  @include space(s70, margin-top);
-  @include space(s70, margin-bottom);
+  @include section(s72, margin-top);
+  @include section(s72, margin-bottom);
   background: map-get($color , bg );
   &__wrapper{
     position: relative;
@@ -14,7 +14,14 @@
       // object-position: bottom;
       //  
       svg{
-        
+        @include rp(tm){
+          width: 120px;
+          height: 150px;
+        }
+        @include rp(mx){
+          width: 100px;
+          height: 125px;
+        }
       }
     }
     .hoavan-line-2{
@@ -24,7 +31,16 @@
       // width: 50%;
       // height: 50%;
       object-position: right;
-      
+      svg{
+        @include rp(tm){
+          width: 70px;
+          height: 75px;
+        }
+        @include rp(mx){
+          width: 60px;
+          height: 65px;
+        }
+      }
     }
   }
   &__content{
@@ -34,35 +50,7 @@
     border-radius: 30px 0px 30px 0px;
    
   }
-  &__title{
-    @include spaceIndex(s80,padding-top);
-    text-align: center;
-    position: relative;
-    &::after{
-      position: absolute;
-      top: calc(100% + 5px);
-      left: 50%;
-      transform: translateX(-50%);
-      width: 40%;
-      height: 2px;
-      background: map-get($color , line1 );
-    }
-    &::before{
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 10px;
-      height: 10px;
-      border-radius: 100px;
-      background: map-get($color , line1 );
-    }
-    &>*{
-      @include title(small);
-      color: map-get($color , text1);
-      line-height: 1.2;
-    }
-  }
+ 
   &__desc{   
     
     @include spaceIndex(s36,margin-top);
