--- a/src/styles/pages/index/i-3.scss
+++ b/src/styles/pages/index/i-3.scss
@@ -9,8 +9,8 @@
         @include spaceIndex3(s100, padding-left);
         @include spaceIndex3(s100, padding-right);
         @include spaceIndex3(s80, padding-bottom);
-        @include space(s70, margin-top);
-        @include space(s70, margin-bottom);
+        @include section(s72, margin-top);
+        @include section(s72, margin-bottom);
         &__overlay{
             top: 100px;
             position: absolute;
@@ -18,7 +18,7 @@
             left: 0;
             background: map-get($color , main);
             width: 100%;
-            height: 70%;
+            height: 75%;
             z-index: -11111;
             box-shadow: 0 3px 6px rgba(0,0,0,.16);
             border-radius: 30px 0px 30px 0px;
@@ -31,7 +31,16 @@
                 // object-position: bottom;
                 //  
                 transform: rotate(180deg);
-                
+                svg{
+                    @include rp(tm){
+                      width: 68px;
+                      height: 75px;
+                    }
+                    @include rp(mx){
+                      width: 58px;
+                      height: 65px;
+                    }
+                  }
                 circle{
                     fill: #fff;
                 }
@@ -47,6 +56,18 @@
                 // height: 50%;
                 object-position: right;
                 transform: rotate(180deg);
+                svg{
+                    width: 151px;
+                    height: 190px;
+                    @include rp(tm){
+                        width: 120px;
+                        height: 150px;
+                    }
+                    @include rp(mx){
+                        width: 100px;
+                        height: 125px;
+                    }
+                }
                 circle{
                     fill: #fff;
                 }
