--- a/src/_templates/village/v-2.pug
+++ b/src/_templates/village/v-2.pug
@@ -4,7 +4,7 @@ section#village2
       .village2__title 
         h1 vinh
       .village2-wrapper.table-row.table-column-2.between.table-column-1-ts
-        - let arrayVillage2 = [["Tài liệu", `./assets/_page/village/document.png`,"./valliage-details.html"], ["Báo cáo", `./assets/_page/village/report.png`,"./valliage-details.html"]]
+        - let arrayVillage2 = [["Tài liệu", `./assets/_page/village/document.png`,"./details.html"], ["Báo cáo", `./assets/_page/village/report.png`,"./details.html"]]
         each val in arrayVillage2
           - let desc = val[0];
           - let img = val[1];
