--- a/src/styles/layout/title.scss
+++ b/src/styles/layout/title.scss
@@ -1,29 +1,34 @@
-.title{
-    @include spaceIndex(s80,padding-top);
-    text-align: center;
-    position: relative;
-    &::after{
-      position: absolute;
-      top: calc(100% + 5px);
-      left: 50%;
-      transform: translateX(-50%);
-      width: 40%;
-      height: 2px;
-      background: map-get($color , line1 );
-    }
-    &::before{
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 10px;
-      height: 10px;
-      border-radius: 100px;
-      background: map-get($color , line1 );
-    }
-    &>*{
-      @include title(small);
-      color: map-get($color , text1);
-      line-height: 1.2;
-    }
+.title {
+  // @include spaceIndex(s80,padding-top);
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  max-width: 682px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 1px;
+    background: map-get($color, line1);
   }
+  &::before {
+    content: "";
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 8px;
+    height: 8px;
+    border-radius: 100px;
+    background: map-get($color, line1);
+  }
+  & > * {
+    @include title(small);
+    color: map-get($color, text1);
+    line-height: 1.2;
+  }
+}
