--- a/src/styles/pages/members/m-2.scss
+++ b/src/styles/pages/members/m-2.scss
@@ -1,4 +1,20 @@
 .members2{
+  position: relative;
+  &::after{
+    content: "";
+    position: absolute;
+    top: 86px;
+    left: 0;
+    right: 0;
+    bottom: 86px;
+    background-color: map-get($color, main);
+    opacity: .37;
+    z-index: -1;
+  }
+  &__title{
+    @include spaceIndex(s80, margin-top);
+    @include spaceIndex(s80, margin-bottom);
+  }
   &-wrapper{
     &__item{
       padding-bottom: 6px;
