--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -80,3 +80,14 @@
     background-color: map-get($color, sub1);
   }
 }
+
+@keyframes backgroundFull{
+  from{
+    width: 0;
+    height: 0;
+  }
+  to{
+    width: 100%;
+    height: 100%;
+  }
+}
