--- a/src/styles/layout/title.scss
+++ b/src/styles/layout/title.scss
@@ -5,30 +5,30 @@
   display: inline-block;
   max-width: 682px;
 
-  &::after {
+  &::before,
+  &::after{
     content: "";
     position: absolute;
     top: calc(100% + 5px);
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
-    height: 1px;
     background: map-get($color, line1);
   }
+
+  &::after {
+    width: 100%;
+    height: 1px;
+  }
   &::before {
-    content: "";
-    position: absolute;
-    top: calc(100% + 5px);
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 8px;
     height: 8px;
     border-radius: 100px;
-    background: map-get($color, line1);
   }
+
   & > * {
     @include title(small);
     color: map-get($color, text1);
     line-height: 1.2;
+    @include regular;
   }
 }
