--- a/src/styles/pages/members/m-2.scss
+++ b/src/styles/pages/members/m-2.scss
@@ -14,6 +14,9 @@
   &__title{
     @include spaceIndex(s80, margin-top);
     @include spaceIndex(s80, margin-bottom);
+
+    text-align: center;
+    width: 100%;
   }
   &-wrapper{
     &__item{
