--- a/src/_templates/index/i-3.pug
+++ b/src/_templates/index/i-3.pug
@@ -3,7 +3,7 @@ section#index-3
         .container
             .index-3__wrapper
                 .content
-                    .content__overlay.hoavan
+                    .content__overlay.hoavan.hoavan--white.hoavan--rotate
                     .content__img 
                         img(src="./assets/_page/index/z2524528714987_d20cba26a3993ed2ec1de06963d8884e.png", alt="giám đốc")
                     .content__desc
