--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@
 @import "components/breadcrumb";
 
 @import "components/language";
+@import "components/hoavan";
 
 // layout
 @import "layout/header";
