--- a/src/styles/pages/index/i-1.scss
+++ b/src/styles/pages/index/i-1.scss
@@ -6,13 +6,13 @@
     position: relative;
     width: 100%;
     .hoavan-line-1{
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      // width: 100%;
-      // height: 100%;
-      // object-position: bottom;
-      //  
+      // position: absolute;
+      // bottom: 0;
+      // left: 0;
+      // // width: 100%;
+      // // height: 100%;
+      // // object-position: bottom;
+      // //  
       svg{
         @include rp(tm){
           width: 120px;
@@ -25,12 +25,12 @@
       }
     }
     .hoavan-line-2{
-      position: absolute;
-      top: 0;
-      right: 0;
-      // width: 50%;
-      // height: 50%;
-      object-position: right;
+      // position: absolute;
+      // top: 0;
+      // right: 0;
+      // // width: 50%;
+      // // height: 50%;
+      // object-position: right;
       svg{
         @include rp(tm){
           width: 70px;
@@ -42,6 +42,12 @@
         }
       }
     }
+  }
+  &__title{
+    @include spaceIndex(s80,padding-top); 
+    display: inline-block;
+    width: 100%;
+    text-align: center;
   }
   &__content{
     @include spaceIndex(s50, padding-left);
