--- a/src/styles/pages/index/i-3.scss
+++ b/src/styles/pages/index/i-3.scss
@@ -23,14 +23,14 @@
             box-shadow: 0 3px 6px rgba(0,0,0,.16);
             border-radius: 30px 0px 30px 0px;
             .hoavan-line-2{
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                // width: 100%;
-                // height: 100%;
-                // object-position: bottom;
-                //  
-                transform: rotate(180deg);
+                // position: absolute;
+                // bottom: 0;
+                // left: 0;
+                // // width: 100%;
+                // // height: 100%;
+                // // object-position: bottom;
+                // //  
+                // transform: rotate(180deg);
                 svg{
                     @include rp(tm){
                       width: 68px;
@@ -41,21 +41,21 @@
                       height: 65px;
                     }
                   }
-                circle{
-                    fill: #fff;
-                }
-                path{
-                    fill: #fff;
-                }
+                // circle{
+                //     fill: #fff;
+                // }
+                // path{
+                //     fill: #fff;
+                // }
               }
               .hoavan-line-1{
-                position: absolute;
-                top: 0;
-                right: 0;
-                // width: 50%;
-                // height: 50%;
-                object-position: right;
-                transform: rotate(180deg);
+                // position: absolute;
+                // top: 0;
+                // right: 0;
+                // // width: 50%;
+                // // height: 50%;
+                // object-position: right;
+                // transform: rotate(180deg);
                 svg{
                     width: 151px;
                     height: 190px;
@@ -68,12 +68,12 @@
                         height: 125px;
                     }
                 }
-                circle{
-                    fill: #fff;
-                }
-                path{
-                    fill: #fff;
-                }
+                // circle{
+                //     fill: #fff;
+                // }
+                // path{
+                //     fill: #fff;
+                // }
               }
         }
         &__img{
