phu add banner members

--- a/src/_templates/_layout/_banner.pug
+++ b/src/_templates/_layout/_banner.pug
@@ -19,5 +19,5 @@ if bannerSub
     .banner.bannerSub
       .banner-img
         img()&attributes(imgBanner)
-      .banner-section
+      .banner-section.hoavan
         .banner-section__title= pageName
