--- a/src/members.pug
+++ b/src/members.pug
@@ -3,6 +3,10 @@ extends _templates/_layout/_layout.pug
 block var
 	- let title = 'Members';
 	- let bodyClass = 'members-page';
+	- let bannerSub = "bannerSub";
+	- let imgBanner = {};
+	- imgBanner.src = "./assets/_page/members/banner.png"
+	- let pageName = "Thành viên của làng"
 
 block main
 	div(id="membersPage")
