--- a/src/styles/pages/members/m-1.scss
+++ b/src/styles/pages/members/m-1.scss
@@ -1,9 +1,15 @@
 #members1 {
-    // padding-top: map-get($space, s70 );
-    // @include space(s70);
-    padding: 70px 0;
+    // padding-top: map-get($space, s70 ,padding);
+    
+    // padding: 70px 0;
     .members1{
+        &--title{
+            width: 100%;
+            text-align: center;
+            @include space(s70 , margin,0);
+        }
         &--wrapper{
+            // @include space(s70 , margin-bottom);
             width: 100%;
             .myStudent-thumb,
             .myStudent{
