fix css hoa van

--- a/src/_templates/_layout/_banner.pug
+++ b/src/_templates/_layout/_banner.pug
@@ -20,4 +20,5 @@ if bannerSub
       .banner-img
         img()&attributes(imgBanner)
       .banner-section
-        .banner-section__title.hoavan.hoavan--white.hoavan--rotate= pageName
+        .overlay__bg.hoavan.hoavan--white.hoavan--rotate
+        .banner-section__title= pageName
