--- a/src/_templates/village/v-1.pug
+++ b/src/_templates/village/v-1.pug
@@ -1,7 +1,10 @@
 section#village1 
   .village1
     .container 
-      .village1-title 
+      .village1__title 
+        each tit in ['1']
+          - let title = "Thông tin về Làng và Ban điều hành";
+          include ../_layout/title.pug
       .village1-wrapper.table-row.table-column-2.between.table-column-1-ts
         - let arrayVillage1 = [["Làng Hi Vọng", `Nép mình một góc nhỏ bên thành phố Đà Nẵng đầy tình người, Làng Hy Vọng là tên thường gọi của Trung tâm Nuôi dạy trẻ em khó khăn thành phố Đà Nẵng, trực thuộc Sở Lao động Thương binh và Xã hội thành phố Đà Nẵng, thành lập vào năm 1993. Làng do Tổ chức Đông Tây Hội Ngộ và Hội Phụ nữ Dân chủ Nhật Bản tài trợ (từ năm 2008 còn được sự tài trợ của Công ty Unilever Việt Nam), nuôi dạy trẻ em mồ côi có`,"./details.html"],["Ban điều hành", `Gắn bó với Làng Hy Vọng và các con tại đây lâu nhất không thể không kể đến hình ảnh của một người thầy đã tận tâm suốt bao nhiêu năm với Làng.Từ năm 2012, thầy Phan Thanh Vinh được UBND thành phố Đà Nẵng biệt phái làm Giám đốc Trung tâm Nuôi dạy trẻ em khó khăn. Đến nay thời hạn biệt phái đã hết, đúng ra thầy sẽ quay trở lại Sở Lao động Thương binh và xã hội thành phố để làm việc, nhưng sau thời`,"./details.html"]]
         each val in arrayVillage1
