--- a/src/_templates/village/v-2.pug
+++ b/src/_templates/village/v-2.pug
@@ -2,7 +2,9 @@ section#village2
   .village2
     .container 
       .village2__title 
-        h1 vinh
+        each tit in ['1']
+          - let title = "Tài liệu & Báo cáo";
+          include ../_layout/title.pug
       .village2-wrapper.table-row.table-column-2.between.table-column-1-ts
         - let arrayVillage2 = [["Tài liệu", `./assets/_page/village/document.png`,"./details.html"], ["Báo cáo", `./assets/_page/village/report.png`,"./details.html"]]
         each val in arrayVillage2
