--- a/src/styles/abstracts/_grid.scss
+++ b/src/styles/abstracts/_grid.scss
@@ -121,6 +121,7 @@ $tableColumn: (
 	&.between{
 		margin-right: -8px;
 		margin-left: -8px;
+		width: calc(100% + 16px);
 	}
 
 	@each $m, $size in $media{
