--- a/src/styles/abstracts/_swiper.scss
+++ b/src/styles/abstracts/_swiper.scss
@@ -12,6 +12,33 @@
     {
         position: absolute;
         z-index: 2;
+
+        width: 60px;
+        height: 60px;
+
+        background-color: rgba(map-get($color, sub1), .1);
+        border-radius: 50%;
+
+        // @include rp(tl){
+        //     background-color: rgba(map-get($color, sub1), .4) ;
+        //     width:50px;
+        //     height: 50px;
+        // }
+
+        @include rp(pm){
+            background-color: rgba(map-get($color, sub1), .4) ;
+            height: 50px;
+            width:50px;
+        }
+
+        @include rp(tx){
+            background-color: rgba(map-get($color, sub1), .1);
+        }
+
+        @media (max-width: 1200px) {
+            background-color: rgba(map-get($color, sub1), .4) ;
+        }
+
         svg{
             width: 30px;
             height: 30px;
@@ -21,33 +48,39 @@
             // }
         }
         &::after{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
             content: "";
-            background-color: rgba(map-get($color, sub1 ), .1) ;
-            width:60px;
-            height: 60px;
-            border-radius: 50%;
-            z-index: -1;
-            @include rp(tl){
-                background-color: rgba(map-get($color, sub1 ), .4) ;
-                width:50px;
-                height: 50px;
-            }
         }
-        
     }
     .swiper-button-next{
-        right: -5vw;
-        @include rp(tl){
+        right: calc(-2% - 60px);
+
+        @include rp(pm){
+            right: 20px;
+        }
+
+        @include rp(tx){
+            right: calc(-2% - 60px);
+        }
+
+        // @include rp(tl){
+        //     right: 20px;
+        // }
+        @media (max-width: 1200px) {
             right: 20px;
         }
     }
     .swiper-button-prev{
-        left: -5vw;
-        @include rp(tl){
+        left: calc(-2% - 60px);
+
+        @include rp(pm){
+            left: 20px;
+        }
+
+        @include rp(tx){
+            left: calc(-2% - 60px);
+        }
+
+        @media (max-width: 1200px) {
             left: 20px;
         }
     }
