--- a/src/styles/pages/members/m-2.scss
+++ b/src/styles/pages/members/m-2.scss
@@ -1,3 +1,6 @@
+#members2{
+  @include section(s70, margin-top);
+}
 .members2{
   position: relative;
   &::after{
@@ -12,9 +15,7 @@
     z-index: -1;
   }
   &__title{
-    @include spaceIndex(s80, margin-top);
-    @include spaceIndex(s80, margin-bottom);
-
+    @include section(s70, margin-bottom);
     text-align: center;
     width: 100%;
   }
