--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -2,19 +2,19 @@ header
     .container 
         .header 
             ul.header-list 
+                .logo.column-2
+                    a.logo-link(href="#")
+                        img(src="./assets/layout/header/Group1.png", alt="logo")
                 li.header-items
-                    a(href="") Làng của con
+                    a(href="#") Làng của con
                 li.header-items
-                    a(href="") Chuyện về làng
+                    a(href="#") Chuyện về làng
                 li.header-items
-                    a(href="") Hằng ngày của con 
+                    a(href="#") Hằng ngày của con 
+                li.header-items.column-2
                 li.header-items
-                    .logo
-                        a(href="#")
-                            img(src="./assets/layout/header/Group1.png", alt="logo")
+                    a(href="#") Thành viên của làng
                 li.header-items
-                    a(href="") Thành viên của làng
+                    a(href="#") Đồng hành cùng con 
                 li.header-items
-                    a(href="") Đồng hành cùng con 
-                li.header-items
-                    a(href="")  Liên hệ 
+                    a(href="#")  Liên hệ 
