--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -2,7 +2,7 @@
     .index-2
         .container
             .index-2__wrapper
-                .content
+                .content.table-row.table-column-3.between.table-column-2-tm.table-column-1-mm
                     .content-box
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="258" height="264" viewBox="0 0 258 264">
                             <defs>
