--- a/src/styles/_variables/_index.scss
+++ b/src/styles/_variables/_index.scss
@@ -23,17 +23,14 @@ $spaceIndex:(
 
 $spaceIndex2:(
     s32: (
-        default: 32px,
-       
+      default: 32px,
+      tx: 12px, 
     ),
    
     s70:(
         default: 70px,
         pm: 50px,
         tx: 35px,
-
-        
-        
     ),
     
 );
