--- a/src/styles/pages/index/i-2.scss
+++ b/src/styles/pages/index/i-2.scss
@@ -1,6 +1,6 @@
 .index-2{
-    @include section(s72, padding-top);
-    @include section(s72, padding-bottom);
+    @include section(s70, padding-top);
+    @include section(s70, padding-bottom);
     background: map-get($color , bg-2);
     &__wrapper{
         width: 100%;
@@ -8,28 +8,36 @@
     .content{
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         width: 100%;
         &-box{
             @include spaceIndex2(s70,padding-left);
             @include spaceIndex2(s70,padding-right);
+
             display: flex;
-            flex: 33.3%;
+            // flex: 33.3%;
             flex-direction: column;
             align-items: center;
+
             @include rp(tl){
-                margin-top: 16px;
+                // margin-top: 16px;
                 // svg{
                 //     width: 230px;
                 //     height: 230px;
                 // }
             }
+            svg{
+                max-width: 258px;
+                max-height: 258px;
+            }
             @include rp(mx){
-                margin-top: 16px;
+                // margin-top: 16px;
                 svg{
                     width: 200px;
                     height: 200px;
                 }
             }
+
             &__desc{
                 @include spaceIndex2(s32,margin-top);
                 &>*{
