--- a/src/styles/pages/story/s-2.scss
+++ b/src/styles/pages/story/s-2.scss
@@ -1,13 +1,16 @@
 #story-2{
-    background-color:#94F7BC ;
+    background-color:rgba(#94F7BC, .36);
     .story-2--wrapper{
         width: 100%;
-        padding: 70px 0;
+        // padding: 70px 0;
+        @include section(s70, margin-top);
+        @include section(s70, margin-bottom);
         @include rp(ts){
             padding: 30px 0;
         }
         &__title{
-
+            width: 100%;
+            text-align: center;
         }
         &__content{
             width: 100%;
